--- a/mako/.config/mako/config
+++ b/mako/.config/mako/config
@@ -9,9 +9,9 @@ width=350
 max-history=20
 format=<b>%s</b>\n%b
 background-color=#000000dd
-text-color=#f5e0ff
+text-color=#ffffff
 border-size=2
-border-color=#e591ff
+border-color=#ffffff
 border-radius=0
 font=JetBrainsMono Nerd Font 11
 ignore-timeout=1
